--- a/index.html
+++ b/index.html
@@ -11,41 +11,14 @@
 
 <body>
 	<div class="mainArea">
-		<div id="flex-header"><h1>Welcome to my website</h1></div>
+		<div id="flex-header"><h1>Check your air quality, humidity and temperature</h1></div>
 		<div id="navigation-div">
-		<ul class="navigation">
-			
-			<!-- <div class="flex-container"> -->
-				<li>
-					<a href="https://www.linkedin.com/in/cahelle-v-21221886">
-						<div class="overlay">LinkedIn</div>
-					</a>
-					<div id="image1">
-					</div>
-
-				</li>
-				<li>
-					<a href="https://www.linkedin.com/in/cahelle-v-21221886">
-						<div class="overlay">LinkedIn</div>
-					</a>
-					<div id="image1">
-					</div>
-
-				</li>
-				<li>
-					<a href="https://www.linkedin.com/in/cahelle-v-21221886">
-						<div class="overlay">LinkedIn</div>
-					</a>
-					<div id="image1">
-					</div>
-
-				</li>
-			<!-- </div> -->
-		</ul>
+            <span id="myspan">
+                message
+            </span>
 		</div>
 	</div>
-
-	
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.1/mqttws31.js" type="text/javascript"></script>
+    <script src="script.js" type="text/javascript"></script>
 </body>
 
-</html>
